--- a/src/parallel/parallel.scss
+++ b/src/parallel/parallel.scss
@@ -51,18 +51,18 @@
   .axis :global(.tick) {
     width: 200px;
   }
-  .axis :global(.label-name) {
+  :global(.hip_thm--light) .axis :global(.label-name) {
     text-shadow: 0 1px 0 #fff, 1px 0 0 #fff, 0 -1px 0 #fff, -1px 0 0 #fff;
   }
 /* Dark mode */
-:global(.dark) .brush rect.extent {
+:global(.hip_thm--dark) .brush rect.extent {
     fill: rgba(100,100,100,0.15);
     stroke: #ddd;
   }
-:global(.dark) .axis text {
+:global(.hip_thm--dark) .axis text {
     fill: #f2f2f2;
     text-shadow: 0 1px 0 #000, 1px 0 0 #000, 0 -1px 0 #000, -1px 0 0 #000;
 }
-:global(.dark) .axis line, :global(.dark) .axis path {
+:global(.hip_thm--dark) .axis line, :global(.hip_thm--dark) .axis path {
     stroke: #777;
 }
